[gd_scene load_steps=10 format=3 uid="uid://2tau215gx3my"]

[ext_resource type="Script" path="res://Enemy/OrangeNPC/orange_npc.gd" id="1_jrdbf"]
[ext_resource type="Texture2D" uid="uid://463tl0q54qsj" path="res://textures/Enemys/OrangeNPC/sonnenbomber_ohne_Hintergrund.png" id="2_d3is0"]
[ext_resource type="Texture2D" uid="uid://br813nqrcaiof" path="res://textures/Enemys/OrangeNPC/sonnenbomber_ohne_Hintergrund_gedreht.png" id="3_haqrs"]
[ext_resource type="Script" path="res://states/State Machine.gd" id="4_3vdfv"]
[ext_resource type="Script" path="res://Enemy/OrangeNPC/states/npcIdle.gd" id="5_pjsvq"]
[ext_resource type="Script" path="res://Enemy/OrangeNPC/states/npcFollow.gd" id="6_y6sku"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ye7da"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d3is0")
}, {
"duration": 1.0,
"texture": ExtResource("3_haqrs")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d3is0")
}],
"loop": true,
"name": &"talking",
"speed": 1.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_githr"]
radius = 19.0
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o83oq"]
radius = 42.0119

[node name="orange_npc" type="CharacterBody2D"]
script = ExtResource("1_jrdbf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_ye7da")
animation = &"talking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("CapsuleShape2D_githr")

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_3vdfv")
initial_state = NodePath("npcIdle")

[node name="npcIdle" type="Node" parent="State Machine" node_paths=PackedStringArray("animated_sprite", "npc")]
script = ExtResource("5_pjsvq")
animated_sprite = NodePath("../../AnimatedSprite2D")
npc = NodePath("../..")

[node name="npcIsTalking" type="Node" parent="State Machine" node_paths=PackedStringArray("animated_sprite", "npc")]
script = ExtResource("6_y6sku")
animated_sprite = NodePath("../../AnimatedSprite2D")
npc = NodePath("../..")

[node name="NPCChatDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPCChatDetection"]
visible = false
shape = SubResource("CircleShape2D_o83oq")

[connection signal="body_entered" from="NPCChatDetection" to="." method="_on_npc_chat_detection_body_entered"]
[connection signal="body_exited" from="NPCChatDetection" to="." method="_on_npc_chat_detection_body_exited"]
